--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^3.6.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.0.0",
+    "gh-pages": "^3.0.0",
     "handlebars": "^4.7.6",
     "handlebars-loader": "^1.7.1",
     "html-loader": "^1.1.0",
