--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --host 0.0.0.0 --config webpack.dev.js"
+    "start": "webpack-dev-server --host 0.0.0.0 --config webpack.dev.js",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
